# routetools

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  config.toml  config_land.toml  config_noland.toml  example_solutions.ipynb  method.py  pyproject.toml  setup.py
.github/workflows/: pytest.yml
demo/: cmaes.py  fms.py  vectorfield.py
output/: bezier.txt  bezier_dnj.txt  dnj.txt
routetools/: cmaes.py  config.py  cost.py  demo.py  fms.py  land.py  land_gen.py  plot.py  vectorfield.py
scripts/: astar.py  draw_fms.py  gradual_land_penalty.py  paper_no_land.py  paper_plots.py  paper_plots_old.py  paper_results.py  paper_tables.py  parameter_search.py  parameter_search.sh  plot_comptime_vs_popsize.py  results_land_avoidance.py  results_on_literature_vector_fields.py  run_results.py  run_results.sh  single_run.py
tests/: test_cmaes.py  test_land.py  test_vectorfield.py
